--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,6 +11,9 @@
                 "C:/Program Files/MySQL/MySQL Server 8.0/include",
                 "main.cpp",
                 "query.cpp",
+                "validation.cpp",
+                "account.cpp",
+                "bank.cpp",
                 "-L",
                 "C:/Program Files/MySQL/MySQL Server 8.0/lib",
                 "-lmysql",
