--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,8 +12,8 @@
                 "main.cpp",
                 "query.cpp",
                 "validation.cpp",
+                "login.cpp",
                 "account.cpp",
-                "bank.cpp",
                 "-L",
                 "C:/Program Files/MySQL/MySQL Server 8.0/lib",
                 "-lmysql",
